# singlechip-lib

./: CMakeLists.txt  CMakeListsPrivate.txt  README.md  build-test.sh  build-upload.sh  build.sh  define.h  main.c
src/: define.h  demo.txt  lcd.c  main.c  test.c  定时器.c  教室红外灯.c  数码管.c  步进电机.c  温度控制.c  红外遥控.c  蓝牙.c
src/moto/: 42Motor.c  42Motor.h  XPT2046.c  XPT2046.h  key.c  key.h  lcd.c  lcd.h  main.c
